# tiktok-cleaner

./: .gitignore  Cargo.toml  README.md
release_output/: README.md  Windows_Setup_Script.iss  tar_command.md
release_output/linux/tiktok_cleaner/: tar_command.md
release_output/windows/: README.md  Windows_Setup_Script.iss
src/: README.md  lib.rs  main.rs
src/tiktok_detection/: README.md  mod.rs  scanner.rs  test_runner.rs  tiktok_photo_det.rs  tiktok_video_det.rs
src/tiktok_detection/file_util/: README.md  file_manager.rs  folder_manager.rs  mod.rs
src/tiktok_detection/metadata_read/: README.md  metadata_manager.rs  mod.rs
src/tiktok_detection/metadata_read/python_examples/: ANALYSIS_RESULTS.md  EXPERIMENT_RESULTS.md  IMAGE_ANALYSIS_RESULTS.md  README.md  batch_tiktok_experiment.py  image_tiktok_analyzer.py  metadata_extractor.py  requirements.txt  tiktok_detector.py  usage.sh
